--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
 body {
-    overflow-x: hidden;
+  
     width: 100%;
     font-family: "Poppins", sans-serif;
     font-size: large;
     font-weight: 400;
+    overflow-x: hidden;
+    
 }
 
 header {
@@ -190,7 +192,10 @@ footer p {
 }
 
 @media only screen and (max-width: 650px) {
-    body {}
+    body {
+        width: 100%;
+        overflow-x: hidden; 
+    }
 
     div#imgLogo,
     div#tryIt {
