--- a/mediumDevices.css
+++ b/mediumDevices.css
@@ -119,7 +119,7 @@
     }
 
     h6 {
-        margin-bottom: -3%;
+        /*margin-bottom: -3%;*/
     }
 
     h4 {
@@ -138,6 +138,8 @@
     }
     
     div#socialContacts {
+        position: relative;
         display: grid;
         grid-template-columns: 1fr;
     }
+    
