--- a/main.css
+++ b/main.css
@@ -3,7 +3,12 @@ body {
     font-family: "Poppins", sans-serif;
     font-size: large;
     font-weight: 400;
+
+}
+
+.page-wrapper {
     overflow-x: hidden;
+    position: relative;
 }
 
 header {
@@ -15,9 +20,9 @@ div#logo {
     width: 199%;
     height: 550px;
     background-color: hsl(214, 64%, 98%);
-      margin-left: -90%;
+    margin-left: -90%;
     transform: rotate(-40deg);
-      z-index: -1;
+    z-index: -1;
 }
 
 div#imgLogo {
@@ -28,17 +33,15 @@ div#imgLogo {
 }
 
 div#rectangle {
-    /* overflow: auto; */
-    /* clear: both; */
     justify-self: end;
-    width: 100%;
-    height: 850px;
+    width: 150%;
+    height: 650px;
     background: linear-gradient(hsl(265, 100%, 66%), hsl(322, 100%, 66%));
     transform: rotate(50deg);
-    margin-left: 40%;
+    margin-right: -50%;
     margin-top: -9%;
     border-radius: 50px;
-    position: absolute;
+    /* position: absolute; */
     z-index: -1;
 }
 
@@ -47,24 +50,22 @@ div#flowing {
 }
 
 div#tryIt {
-    position: relative;
-    /* align-self: baseline; */
-    justify-self: end;
-    width: 30%;
+    position: absolute;
+    width: 20%;
     height: 50px;
     background: white;
     text-align: center;
     font-size: large;
     line-height: 2.5em;
     margin-top: 5%;
-    margin-right: 10%;
+    margin-left: 70%;
 }
 
 main {
     /* clear: both; */
     z-index: -1;
     width: 100%;
-    position: absolute;
+   /* position: absolute;*/
 }
 
 div#hero {
@@ -80,12 +81,17 @@ img#mockups {
 
 div#build {
     /*  margin-top: 20%;
-        margin: auto; */
-    margin-left: 30%;
+        margin: auto;
+    margin-left: 30%; */
+}
+
+h1 {
+    text-align: center;
 }
 
 div#build p {
     width: 50%;
+    margin: auto;
     text-align: center;
 }
 
@@ -95,11 +101,15 @@ p {
 
 button.getStarted {
     width: 300px;
-    height: 40px;
+    height: 60px;
     font-size: large;
     background-color: hsl(322, 100%, 66%);
     color: white;
-    /* margin: auto; */
+     margin: 3% 40%;
+}
+
+h3 {
+    font-size: xx-large;
 }
 
 div#illustration {
@@ -128,8 +138,7 @@ div#trial {
 
 footer {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    margin-top: 2050px;
+    grid-template-columns: 2fr 1fr 1fr;   
     color: white;
     background-color: hsl(192, 100%, 9%);
     padding: 5% 3% 5% 3%;
@@ -144,6 +153,8 @@ footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     font-size: x-large;
+    height: 50%;
+    margin-top: 40%;
 }
 
 input[type="text"] {
@@ -192,5 +203,12 @@ footer p {
 }
 
 p.attribution a {
-    color: indianred;
+    color: white;
+}
+
+.about a {
+    text-decoration: none;
+    color: white;
+    font-size: small;
+    align-self: end;
 }
