--- a/main.css
+++ b/main.css
@@ -62,11 +62,9 @@ div#tryIt {
 }
 
 main {
-    /* clear: both; */
-    z-index: -1;
+       z-index: -1;
     width: 100%;
-   /* position: absolute;*/
-}
+  }
 
 div#hero {
     width: 100%;
@@ -77,12 +75,6 @@ img#mockups {
     width: 50%;
     margin-left: 22%;
     /* margin: auto; */
-}
-
-div#build {
-    /*  margin-top: 20%;
-        margin: auto;
-    margin-left: 30%; */
 }
 
 h1 {
@@ -105,7 +97,11 @@ button.getStarted {
     font-size: large;
     background-color: hsl(322, 100%, 66%);
     color: white;
-     margin: 5% 40%;
+     margin: 5% auto;
+}
+
+#build button.getStarted {
+    margin: 5% 40%;
 }
 
 h3 {
